// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketHeader component should render existing ticket 1`] = `
<div
  className="component"
>
  <div
    className="d-flex justify-content-between mb-2"
  >
    <EditableTitle
      className="mr-2 editableTitle"
      focus={false}
      placeholder="Subject"
      size="xl"
      style={Object {}}
      title="foo"
      update={[Function]}
    />
    <Connect(TicketSnooze)
      className="headerIcon"
    />
    <TicketTrash
      className="headerIcon"
      trashed={false}
    />
    <TicketSpam
      className="headerIcon"
      spam={false}
    />
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        className="btn-transparent"
        color="secondary"
        id="ticket-actions-button"
        size="sm"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          more_vert
        </i>
      </DropdownToggle>
      <TicketSnoozePicker
        isOpen={false}
        onApply={[Function]}
        toggle={[Function]}
      />
      <DropdownMenu
        className="actionsDropdown"
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            snooze
          </i>
          snooze
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            call_merge
          </i>
          merge ticket
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            event_note
          </i>
          display
           
          all events
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            print
          </i>
          print ticket
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span>
            <i
              className="icon material-icons"
            >
              not_interested
            </i>
            mark as spam
          </span>
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <div
            className="text-danger"
          >
            <i
              className="icon material-icons"
            >
              delete
            </i>
            delete
          </div>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="ticket-actions-button"
            toggle={[Function]}
          >
            <PopoverHeader
              tag="h3"
            >
              Are you sure?
            </PopoverHeader>
            <PopoverBody
              tag="div"
            >
              <p>
                You are about to
                 
                <b>
                  delete
                </b>
                 this ticket.
              </p>
              <Button
                autoFocus={true}
                color="success"
                onClick={[Function]}
                tag="button"
                type="submit"
              >
                Confirm
              </Button>
            </PopoverBody>
          </Popover>
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="d-inline-flex"
    >
      <TicketStatus
        currentStatus="open"
        setQuickStatus={[Function]}
      />
      <Connect(Component)
        transparent={true}
      />
    </div>
    <div
      className="d-inline-flex align-items-top"
    >
      <Connect(TicketAssignee)
        className="assignee"
        direction="right"
        transparent={true}
      />
    </div>
  </div>
  <Connect(MergeTicketsContainer)
    isOpen={false}
    sourceTicket={
      Immutable.Map {
        "id": 1,
        "subject": "foo",
        "status": "open",
      }
    }
    toggleModal={[Function]}
  />
</div>
`;

exports[`TicketHeader component should render new ticket 1`] = `
<div
  className="component"
>
  <div
    className="d-flex justify-content-between mb-2"
  >
    <EditableTitle
      className="mr-2 editableTitle"
      focus={true}
      placeholder="Subject"
      size="xl"
      style={Object {}}
      title="foo"
      update={[Function]}
    />
    <Connect(TicketSnooze)
      className="headerIcon"
    />
    <TicketTrash
      className="headerIcon"
      trashed={false}
    />
    <TicketSpam
      className="headerIcon"
      spam={false}
    />
  </div>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="d-inline-flex"
    >
      <Connect(Component)
        transparent={true}
      />
    </div>
    <div
      className="d-inline-flex align-items-top"
    >
      <Connect(TicketAssignee)
        className="assignee"
        direction="right"
        transparent={true}
      />
    </div>
  </div>
  <Connect(MergeTicketsContainer)
    isOpen={false}
    sourceTicket={
      Immutable.Map {
        "subject": "foo",
        "status": "open",
      }
    }
    toggleModal={[Function]}
  />
</div>
`;

exports[`TicketHeader component should render spam ticket 1`] = `
<div
  className="component"
>
  <div
    className="d-flex justify-content-between mb-2"
  >
    <EditableTitle
      className="mr-2 editableTitle"
      focus={false}
      placeholder="Subject"
      size="xl"
      style={Object {}}
      title="foo"
      update={[Function]}
    />
    <Connect(TicketSnooze)
      className="headerIcon"
    />
    <TicketTrash
      className="headerIcon"
      trashed={false}
    />
    <TicketSpam
      className="headerIcon"
      spam={true}
    />
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        className="btn-transparent"
        color="secondary"
        id="ticket-actions-button"
        size="sm"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          more_vert
        </i>
      </DropdownToggle>
      <TicketSnoozePicker
        isOpen={false}
        onApply={[Function]}
        toggle={[Function]}
      />
      <DropdownMenu
        className="actionsDropdown"
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            snooze
          </i>
          snooze
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            call_merge
          </i>
          merge ticket
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            event_note
          </i>
          display
           
          all events
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            print
          </i>
          print ticket
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span>
            <i
              className="icon material-icons"
            >
              undo
            </i>
            unmark as spam
          </span>
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <div
            className="text-danger"
          >
            <i
              className="icon material-icons"
            >
              delete
            </i>
            delete
          </div>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="ticket-actions-button"
            toggle={[Function]}
          >
            <PopoverHeader
              tag="h3"
            >
              Are you sure?
            </PopoverHeader>
            <PopoverBody
              tag="div"
            >
              <p>
                You are about to
                 
                <b>
                  delete
                </b>
                 this ticket.
              </p>
              <Button
                autoFocus={true}
                color="success"
                onClick={[Function]}
                tag="button"
                type="submit"
              >
                Confirm
              </Button>
            </PopoverBody>
          </Popover>
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="d-inline-flex"
    >
      <TicketStatus
        currentStatus="open"
        setQuickStatus={[Function]}
      />
      <Connect(Component)
        transparent={true}
      />
    </div>
    <div
      className="d-inline-flex align-items-top"
    >
      <Connect(TicketAssignee)
        className="assignee"
        direction="right"
        transparent={true}
      />
    </div>
  </div>
  <Connect(MergeTicketsContainer)
    isOpen={false}
    sourceTicket={
      Immutable.Map {
        "id": 1,
        "spam": true,
        "subject": "foo",
        "status": "open",
      }
    }
    toggleModal={[Function]}
  />
</div>
`;

exports[`TicketHeader component should render trashed ticket 1`] = `
<div
  className="component"
>
  <div
    className="d-flex justify-content-between mb-2"
  >
    <EditableTitle
      className="mr-2 editableTitle"
      focus={false}
      placeholder="Subject"
      size="xl"
      style={Object {}}
      title="foo"
      update={[Function]}
    />
    <Connect(TicketSnooze)
      className="headerIcon"
    />
    <TicketTrash
      className="headerIcon"
      trashed={true}
    />
    <TicketSpam
      className="headerIcon"
      spam={false}
    />
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        className="btn-transparent"
        color="secondary"
        id="ticket-actions-button"
        size="sm"
        type="button"
      >
        <i
          className="material-icons md-2"
        >
          more_vert
        </i>
      </DropdownToggle>
      <TicketSnoozePicker
        isOpen={false}
        onApply={[Function]}
        toggle={[Function]}
      />
      <DropdownMenu
        className="actionsDropdown"
        flip={true}
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            snooze
          </i>
          snooze
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            call_merge
          </i>
          merge ticket
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            event_note
          </i>
          display
           
          all events
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            print
          </i>
          print ticket
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span>
            <i
              className="icon material-icons"
            >
              not_interested
            </i>
            mark as spam
          </span>
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <i
            className="icon material-icons"
          >
            undo
          </i>
          undelete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div
    className="d-flex justify-content-between"
  >
    <div
      className="d-inline-flex"
    >
      <TicketStatus
        currentStatus="open"
        setQuickStatus={[Function]}
      />
      <Connect(Component)
        transparent={true}
      />
    </div>
    <div
      className="d-inline-flex align-items-top"
    >
      <Connect(TicketAssignee)
        className="assignee"
        direction="right"
        transparent={true}
      />
    </div>
  </div>
  <Connect(MergeTicketsContainer)
    isOpen={false}
    sourceTicket={
      Immutable.Map {
        "id": 1,
        "trashed_datetime": true,
        "subject": "foo",
        "status": "open",
      }
    }
    toggleModal={[Function]}
  />
</div>
`;
